--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">We have our bases coverd.</h3>
         </div>
       </div>
       <div class="row">
@@ -123,8 +123,8 @@
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Adidas</h4>
+            <p class="text-muted">Paper Recipts</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,8 +137,8 @@
             <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Livestock</h4>
+            <p class="text-muted">Paper Recipts</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -151,8 +151,8 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Exclucity</h4>
+            <p class="text-muted">Paper Recipts</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,8 +165,8 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Haven</h4>
+            <p class="text-muted">Paper Recipts</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,8 +179,8 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
+            <h4>Footlocker</h4>
+            <p class="text-muted">Invoices</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -193,8 +193,8 @@
             <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>SSense</h4>
+            <p class="text-muted">Invoices</p>
           </div>
         </div>
       </div>
